kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ll-o-m-deployment
  labels:
    app: ll-o-m
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: ll-o-m
  template:
    metadata:
      labels:
        app: ll-o-m
    spec:
      containers:
        - name: ll-o-m-container
          image: myteayourmilk/ll-o-m:test
          ports:
            - containerPort: 8000
              name: web
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Accept
                  value: application/json
              path: /health
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Accept
                  value: application/json
              path: /health
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 10
          volumeMounts:
            - name: config-volume
              mountPath: /config/application.yml
              subPath: application.yml
      volumes:
        - name: config-volume
          configMap:
            name: app-config
