kubernetes/service.yml
#определяет некоторое количество подов в абстракцию сервиса → встроенный контроллер позволяет с помощью сервиса организовать роутинг и балансировку
apiVersion: v1
kind: Service
metadata:
  name: ll-o-m-service
spec:
  selector:
    app: ll-o-m
  ports:
    - protocol: TCP
      port: 80 #Указывает порт, который будет открыт на сервисе
      targetPort: 8000 #Указывает целевой порт внутри подов, на которые будет направляться трафик
  type: LoadBalancer #Указывает тип сервиса
